<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name">

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_1" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_2" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_3" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_4" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

    </android.support.v4.view.ViewPager>


    <fragment
        android:id="@+id/fragment"
        android:name="com.example.afeeniphillips.nytour.RestaurantFragment"
        android:layout_width="wrap_content"
        android:layout_height="400"
        tools:layout="@layout/restaurant_layout" />



    <!--<FrameLayout-->
        <!--android:id="@+id/fragment0"-->
        <!--android:name="com.example.afeeniphillips.nytour.RestaurantFragment"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="542dp"-->
        <!--tools:layout="@layout/restaurant_layout" >-->


    <!--</FrameLayout>-->

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:gravity="center_horizontal|bottom"-->
        <!--android:orientation="vertical">-->



        <!--<fragment-->
            <!--android:id="@+id/fragment1"-->
            <!--android:name="com.example.afeeniphillips.nytour.ParksFragment"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="542dp"-->
            <!--tools:layout="@layout/fragment_parks" />-->


        <!--<fragment-->
            <!--android:id="@+id/fragment2"-->
            <!--android:name="com.example.afeeniphillips.nytour.AttractionsFragment"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="542dp"-->
            <!--tools:layout="@layout/attractions_layout" />-->


        <!--<fragment-->
            <!--android:id="@+id/fragment3"-->
            <!--android:name="com.example.afeeniphillips.nytour.ShopsFragment"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="542dp"-->
            <!--tools:layout="@layout/shopslayout" />-->

    <!--</LinearLayout>-->




    <!--<android.support.design.widget.FloatingActionButton-->
        <!--android:id="@+id/fab"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="end|bottom"-->
        <!--android:layout_margin="@dimen/fab_margin"-->
        <!--app:srcCompat="@android:drawable/ic_dialog_email" />-->

</android.support.design.widget.CoordinatorLayout>

    <!--<RelativeLayout>-->
    <!---->

    <!---->
    <!--</RelativeLayout>-->